2012-10-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* dcraw: VisualMagick configure fixes to support linking with JPEG
	and JPEG2000.

2012-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* dcraw: Add dcraw to VisualMagick build.

	* libxml: Update libxml2 to 2.9.0 release.

2012-09-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tiff: Update libtiff to 4.0.3 release.

	* lcms: Update liblcms2 to 2.4 release.

	* png: Update libpng to 1.5.13 release.

2012-09-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Update to Automake 1.12.4.

2012-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Fix Debian bug 687738 "graphicsmagick:
	repeated words suitable for suitable for in gm manpage" reported
	by Jonas Smedegaard.

2012-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with news since last release.

	* configure.ac: Added the configure option
	--enable-quantum-library-names to enable that shared library name
	includes quantum depth to allow shared libraries with different
	quantum depths to co-exist in same directory (only one can be used
	for development).

2012-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (AdaptiveThresholdImage): New implementation
	contributed by Roberto de Deus Barbosa Murta.  Executes in linear
	time as threhold area is increased rather than being quadratic.

2012-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c: Fix improper injection of XML headers as rendered
	text.

	* magick/render.c (DrawImage): Fix SourceForge issue 3499164
	"Drawing of text fails if text starts with "," character".  Fix
	SourceForge issue 3411492 "Certain SVGs hang GraphicsMagick".  Fix
	SourceForge issue 1961000 "Could not print ',' via convert draw
	text".

2012-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wmf.c (lite_font_stringwidth): Simply return zero.